deployement/golang/golang_example_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web
  labels:
    app: go-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-web
  template:
    metadata:
      labels:
        app: go-web
    spec:
      containers:
      - name: go-web
        image: quay.io/hazel_shen/go_exporter_example:v2
        ports:
        - containerPort: 8000
