deployement/golang/golang_example_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: node-exporter-service
  namespace: node-exporter-example
spec:
  selector:
    app: go-web
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
