deployement/golang/golang_example_route.yaml
---
apiVersion: v1
kind: Route
metadata:
  name: go-web
spec:
  matchLabels:
    app: go-web
  to:
    kind: Service
    name: go-web
